--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "main": "dist/index.js",
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
-    "files": ["dist", "LICENSE", "README.md"],
+    "files": [
+        "dist",
+        "LICENSE",
+        "README.md"
+    ],
     "scripts": {
         "build": "tsc",
         "clean": "rimraf dist",
@@ -43,9 +47,9 @@
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
         "eslint": "^8.56.0",
+        "rimraf": "^5.0.1",
         "typescript": "^5.3.3",
-        "vitest": "^1.0.4",
-        "rimraf": "^5.0.1"
+        "vitest": "^3.1.4"
     },
     "engines": {
         "node": ">=16.0.0"
