--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
+        "@vitest/coverage-v8": "^3.1.4",
         "eslint": "^8.56.0",
         "rimraf": "^5.0.1",
         "typescript": "^5.3.3",
